# IndoDB

./: .gitignore  .hie.yaml  CMakeLists.txt  IndoDB.cabal  LICENSE  README.md  build.sh  db_structure.md  initial_structure.md  main  output.json
E2E/: bulk_input.txt  checker.py  input_tests.py  populate_tests.py  tester.py  tester_fin.py
E2E/tests/test_0/: output.txt
E2E/tests/test_00/: expected_output.txt  input.txt  output.txt
E2E/tests/test_01/: expected_output.txt  input.txt
E2E/tests/test_02/: error.txt  expected_output.txt  input.txt
E2E/tests/test_03/: expected_output.txt  input.txt  output.txt
E2E/tests/test_04/: expected_output.txt  output.txt
E2E/tests/test_05/: expected_output.txt  input.txt
E2E/tests/test_06/: expected_output.txt  output.txt
E2E/tests/test_07/: output.txt
E2E/tests/test_08/: output.txt
E2E/tests/test_09/: output.txt
E2E/tests/test_1/: input.txt  output.txt
E2E/tests/test_11/: expected_output.txt  input.txt
E2E/tests/test_12/: expected_output.txt  output.txt
E2E/tests/test_13/: expected_output.txt  output.txt
E2E/tests/test_14/: input.txt  output.txt
E2E/tests/test_15/: expected_output.txt  output.txt
E2E/tests/test_16/: expected_output.txt
E2E/tests/test_17/: expected_output.txt  input.txt  output.txt
E2E/tests/test_18/: error.txt  input.txt  output.txt
E2E/tests/test_19/: expected_output.txt  input.txt  output.txt
E2E/tests/test_20/: expected_output.txt
E2E/tests/test_45/: output.txt
doc/: haskell.md  initial_structure.md  parser.md
docs/readmes/cod-standarde/: README.md
docs/readmes/design-patterns/: README.md
docs/readmes/diagrame/: README.md
docs/readmes/prompt-engineering/: README.md
docs/readmes/prompt-engineering/prompts/: prompt1.md  prompt2.md  prompt3.md
docs/readmes/source-control/: README.md
docs/readmes/teste-automate/: README.md
docs/readmes/user-stories/: README.md
e2e/: bulk_input.txt  tester.py
e2e/tests/test_00/: output.txt
e2e/tests/test_01/: expected_output.txt  output.txt
e2e/tests/test_02/: output.txt
e2e/tests/test_04/: expected_output.txt  input.txt
e2e/tests/test_05/: output.txt
e2e/tests/test_06/: input.txt
e2e/tests/test_07/: expected_output.txt  input.txt
e2e/tests/test_08/: input.txt
e2e/tests/test_09/: expected_output.txt  input.txt
e2e/tests/test_10/: expected_output.txt  input.txt  output.txt
e2e/tests/test_11/: output.txt
e2e/tests/test_12/: input.txt
e2e/tests/test_13/: input.txt
e2e/tests/test_14/: expected_output.txt
e2e/tests/test_15/: input.txt  output.txt
e2e/tests/test_16/: input.txt  output.txt
e2e/tests/test_18/: expected_output.txt
e2e/tests/test_20/: expected_output.txt  input.txt  output.txt
include/: config.h  constraints.h  libraries.h
include/cli/: cli.h  statement_ops.h  statement_parse.h
include/core/: database_ops.h  datafile_ops  datafile_ops.h  memory_ops.h  row_btree_ops.h
include/data/: core_structures.h  parser_structures.h
include/utils/: globals.h  queue.h
plm/b-tree_pages/: libraries.h  main  main.c  queue.h
src/: main  main.c  output.json
src/b-tree_pages/: btree_operations.h  classic_b-tree.c  data_structures.h  main  main.c
src/cli/: cli.c  statement_ops.c  statement_parse.c
src/core/: database_ops.c  datafile_ops.c  memory_ops.c  row_btree_ops.c
src/pages/: inital_page_handling.c  inital_page_handling.h
src/parser/: AST.hs  Expr.hs  Main.hs  Parser.hs  README.md  Utils.hs  main.c  main.hi  main.hs  output.json  parser.cabal  sql-parser.cabal
src/parser/app/: Main.hi  Main.hs
src/parser/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/rows_btree/: config.h  data_structures.h  main  main.c  memory_op.h  queue.h  row_btree_op.h
src/rows_btree/headers/: config.h  data_structures.h  datafile_ops.h  libraries.h  memory_op.h  memory_ops.h  queue.h  row_btree_op.h  row_btree_ops.h
src/rows_btree/output/: main
src/rows_btree/src/: datafile_ops.c  globals.c  memory_op.c  memory_ops.c  queue.c  row_btree_op.c  row_btree_ops.c
src/tables_btree/: config.h  data_structures.h  libraries.h  main.c  memory_op.h  table_btree_op.h
src/utils/: cJSON.c  copy_dir.c  globals.c  mainnn.c  queue.c  transactions.c
src_Parser/pages/: inital_page_handling.c
src_Parser/parser/: parser.cabal
