cabal-version:       2.4
name:                sql-parser
version:             0.1.0.0
synopsis:            SQL Parser for IndoDB
build-type:          Simple

executable sql_parser
  main-is:             Main.hs
  build-depends:       base,
                       aeson,
                       parsec,
                       bytestring
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  hs-source-dirs:      .